--- a/plist/parent.plist
+++ b/plist/parent.plist
@@ -5,7 +5,7 @@
     <key>com.apple.security.app-sandbox</key>
     <true/>
     <key>com.apple.security.application-groups</key>
-    <string>HB4N6B2YVM.org.whalebird.desktop</string>
+    <string>HB4N6B2YVM.social.whalebird.desktop</string>
     <key>com.apple.security.files.user-selected.read-only</key>
     <true/>
     <key>com.apple.security.network.client</key>
