--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Whalebird",
-  "version": "4.7.4",
+  "version": "5.0.0-alpha.1",
   "author": "AkiraFukushima <h3.poteto@gmail.com>",
   "description": "An Electron based Mastodon client for Windows, Mac and Linux",
   "license": "MIT",
@@ -15,8 +15,8 @@
     "url": "https://github.com/h3poteto/whalebird-desktop.git"
   },
   "config": {
-    "buildVersion": "135",
-    "appVersion": "4.7.4"
+    "buildVersion": "136",
+    "appVersion": "5.0.0"
   },
   "main": "./dist/electron/main.js",
   "scripts": {
