--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Whalebird",
-  "version": "5.0.0-rc.3",
+  "version": "5.0.0",
   "author": "AkiraFukushima <h3.poteto@gmail.com>",
   "description": "An Electron based Mastodon client for Windows, Mac and Linux",
   "license": "MIT",
@@ -15,7 +15,7 @@
     "url": "https://github.com/h3poteto/whalebird-desktop.git"
   },
   "config": {
-    "buildVersion": "147",
+    "buildVersion": "148",
     "appVersion": "5.0.0"
   },
   "main": "./dist/electron/main.js",
