--- a/plist/team.plist
+++ b/plist/team.plist
@@ -4,5 +4,7 @@
   <dict>
     <key>ElectronTeamID</key>
     <string>HB4N6B2YVM</string>
+    <key>ITSAppUsesNonExemptEncryption</key>
+    <false/>
   </dict>
 </plist>
