--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "build": "node .electron-vue/build.js",
     "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
     "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
-    "build:mas": "electron-builder --mac mas --universal --config electron-builder.json",
+    "package:mas": "electron-builder --mac --publish never --config electron-builder.mas.json",
     "package:mac": "electron-builder --mac --publish never --config electron-builder.json",
     "package:linux": "electron-builder --linux --publish never --config electron-builder.json",
     "package:win32": "electron-builder --win --ia32 --publish never --config electron-builder.json",
     "package:win64": "electron-builder --win --x64 --publish never --config electron-builder.json",
     "package:pacman": "electron-builder --linux pacman --publish never --config electron-builder.json",
-    "package:appx2": "electron-builder --win --x64 --config electron-builder.json && electron-windows-store --assets .\\build\\icons --input-directory .\\build\\win-unpacked --output-directory .\\build\\appx --package-name Whalebird --package-display-name Whalebird --package-version 5.0.1.0 --publisher-display-name h3poteto --identity-name 45610h3poteto.Whalebird",
+    "package:appx2": "electron-builder --win --x64 --config electron-builder.json && electron-windows-store --assets .\\build\\icons --input-directory .\\build\\win-unpacked --output-directory .\\build\\appx --package-name Whalebird --package-display-name Whalebird --package-version 5.0.1.1 --publisher-display-name h3poteto --identity-name 45610h3poteto.Whalebird",
     "pack": "yarn run pack:main && yarn run pack:renderer",
     "pack:main": "webpack --node-env=production --mode production --progress --config .electron-vue/webpack.main.config.js",
     "pack:renderer": "webpack --node-env=production --mode production --progress --config .electron-vue/webpack.renderer.config.js",
@@ -120,7 +120,6 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/register": "^7.21.0",
     "@babel/runtime": "7.21.0",
-    "@electron/universal": "^1.3.4",
     "@types/auto-launch": "^5.0.2",
     "@types/electron-json-storage": "^4.5.0",
     "@types/jest": "27.4.1",
@@ -150,12 +149,10 @@
     "del": "^6.1.1",
     "devtron": "^1.4.0",
     "electron": "20.3.12",
-    "electron-builder": "23.3.3",
+    "electron-builder": "24.0.0",
     "electron-debug": "^3.2.0",
     "electron-devtools-installer": "^3.2.0",
     "electron-mock-ipc": "^0.3.12",
-    "electron-notarize": "^1.2.2",
-    "electron-packager": "^17.1.1",
     "electron-windows-store": "^2.1.0",
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
