--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Whalebird",
-  "version": "5.0.1",
+  "version": "5.0.2-beta.1",
   "author": "AkiraFukushima <h3.poteto@gmail.com>",
   "description": "An Electron based Mastodon client for Windows, Mac and Linux",
   "license": "MIT",
