--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Whalebird",
-  "version": "5.0.1",
+  "version": "5.0.2",
   "author": "AkiraFukushima <h3.poteto@gmail.com>",
   "description": "An Electron based Mastodon client for Windows, Mac and Linux",
   "license": "MIT",
@@ -24,13 +24,13 @@
     "build": "node .electron-vue/build.js",
     "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
     "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
-    "package:mas": "electron-builder --mac --publish never --config electron-builder.mas.json",
+    "package:mas": "yarn run build:clean && yarn run pack && node packager.js",
     "package:mac": "electron-builder --mac --publish never --config electron-builder.json",
     "package:linux": "electron-builder --linux --publish never --config electron-builder.json",
     "package:win32": "electron-builder --win --ia32 --publish never --config electron-builder.json",
     "package:win64": "electron-builder --win --x64 --publish never --config electron-builder.json",
     "package:pacman": "electron-builder --linux pacman --publish never --config electron-builder.json",
-    "package:appx2": "electron-builder --win --x64 --config electron-builder.json && electron-windows-store --assets .\\build\\icons --input-directory .\\build\\win-unpacked --output-directory .\\build\\appx --package-name Whalebird --package-display-name Whalebird --package-version 5.0.1.1 --publisher-display-name h3poteto --identity-name 45610h3poteto.Whalebird",
+    "package:appx2": "electron-builder --win --x64 --config electron-builder.json && electron-windows-store --assets .\\build\\icons --input-directory .\\build\\win-unpacked --output-directory .\\build\\appx --package-name Whalebird --package-display-name Whalebird --package-version 5.0.2.0 --publisher-display-name h3poteto --identity-name 45610h3poteto.Whalebird",
     "pack": "yarn run pack:main && yarn run pack:renderer",
     "pack:main": "webpack --node-env=production --mode production --progress --config .electron-vue/webpack.main.config.js",
     "pack:renderer": "webpack --node-env=production --mode production --progress --config .electron-vue/webpack.renderer.config.js",
@@ -155,6 +155,7 @@
     "electron-debug": "^3.2.0",
     "electron-devtools-installer": "^3.2.0",
     "electron-mock-ipc": "^0.3.12",
+    "electron-packager": "^17.1.1",
     "electron-windows-store": "^2.1.0",
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
