--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build": "node .electron-vue/build.js",
     "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
     "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
-    "package:mas": "yarn run build:clean && yarn run pack && node packager.js",
+    "package:mas": "yarn run build:clean && yarn run pack && node packages/packager.js && node packages/universal.js && DEBUG=electron-osx-sign* electron-osx-sign ./packages/Whalebird-mas-universal/Whalebird.app --identity=\"3rd Party Mac Developer Application: Akira Fukushima (HB4N6B2YVM)\" --identityValidation --platform=mas --type=distribution --provisioningProfile=./packages/socialwhalebirdapp_MAS.provisionprofile",
     "package:mac": "electron-builder --mac --publish never --config electron-builder.json",
     "package:linux": "electron-builder --linux --publish never --config electron-builder.json",
     "package:win32": "electron-builder --win --ia32 --publish never --config electron-builder.json",
@@ -121,6 +121,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/register": "^7.21.0",
     "@babel/runtime": "7.21.0",
+    "@electron/universal": "^1.3.4",
     "@types/auto-launch": "^5.0.2",
     "@types/better-sqlite3": "^7.6.3",
     "@types/electron-json-storage": "^4.5.0",
