--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "build": "node .electron-vue/build.js",
     "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
     "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
-    "package:mas": "yarn run build:clean && yarn run pack && node packages/packager.js && node packages/universal.js && DEBUG=electron-osx-sign* electron-osx-sign ./packages/Whalebird-mas-universal/Whalebird.app --identity=\"3rd Party Mac Developer Application: Akira Fukushima (HB4N6B2YVM)\" --identityValidation --platform=mas --type=distribution --provisioningProfile=./packages/socialwhalebirdapp_MAS.provisionprofile",
+    "package:store": "yarn run build:clean && yarn run pack && node packages/packager.js && node packages/universal.js && DEBUG=electron-osx-sign* electron-osx-sign ./packages/Whalebird-mas-universal/Whalebird.app --identity=\"3rd Party Mac Developer Application: Akira Fukushima (HB4N6B2YVM)\" --identityValidation --platform=mas --type=distribution --provisioningProfile=./packages/socialwhalebirdapp_MAS.provisionprofile",
+    "package:mas": "electron-builder --mac --publish never --config electron-builder.mas.json",
     "package:mac": "electron-builder --mac --publish never --config electron-builder.json",
     "package:linux": "electron-builder --linux --publish never --config electron-builder.json",
     "package:win32": "electron-builder --win --ia32 --publish never --config electron-builder.json",
