--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "@babel/register": "^7.21.0",
     "@babel/runtime": "7.21.0",
     "@electron/notarize": "^1.2.3",
+    "@electron/universal": "^1.3.4",
     "@types/auto-launch": "^5.0.2",
     "@types/better-sqlite3": "^7.6.3",
     "@types/electron-json-storage": "^4.5.0",
