--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "pack": "yarn run pack:main && yarn run pack:renderer",
     "pack:main": "webpack --node-env=production --mode production --progress --config .electron-vue/webpack.main.config.js",
     "pack:renderer": "webpack --node-env=production --mode production --progress --config .electron-vue/webpack.renderer.config.js",
-    "typecheck": "tsc -p . --noEmit",
+    "typecheck": "tsc -p . --noEmit && vue-tsc --noEmit",
     "spec": "NODE_ENV=test jest -u --maxWorkers=3",
     "postinstall": "electron-builder install-app-deps",
     "thirdparty": "license-checker --production --json > thirdparty.json && node scripts/thirdparty.js"
@@ -196,6 +196,7 @@
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^17.2.2",
     "vue-style-loader": "^4.1.3",
+    "vue-tsc": "^1.6.5",
     "webpack": "^5.82.1",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0",
