--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "postcss": "^8.4.23",
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.6",
+    "prettier": "^3.0.3",
     "process": "^0.11.10",
     "regenerator-runtime": "^0.13.11",
     "sass-loader": "^13.2.2",
