--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
   "main": "main.cjs",
   "dependencies": {
     "dexie": "4.0.1-alpha.25",
-    "megalodon": "8.1.3",
-    "svelte-virtual-scroll-list": "^1.3.0",
     "flowbite": "^1.8.1",
     "flowbite-svelte": "^0.44.17",
+    "flowbite-svelte-icons": "^0.4.4",
+    "megalodon": "8.1.3",
+    "svelte-virtual-scroll-list": "^1.3.0",
     "tailwindcss": "^3.3.3"
   }
 }
