--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "flowbite": "^1.8.1",
     "flowbite-svelte": "^0.44.17",
     "flowbite-svelte-icons": "^0.4.4",
+    "html-to-text": "^9.0.5",
     "megalodon": "8.1.5",
     "svelte-virtual-scroll-list": "^1.3.0",
     "tailwindcss": "^3.3.3"
