--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@fontsource/fira-mono": "^5.0.0",
     "@neoconfetti/svelte": "^1.0.0",
+    "@rollup/plugin-json": "^6.0.1",
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.20.4",
     "@types/cookie": "^0.5.1",
@@ -37,6 +38,7 @@
     "flowbite-svelte-icons": "^0.4.4",
     "html-to-text": "^9.0.5",
     "megalodon": "8.1.5",
+    "svelte-i18n": "^4.0.0",
     "svelte-virtual-scroll-list": "^1.3.0",
     "tailwindcss": "^3.3.3"
   }
