--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -3,23 +3,45 @@
  */
 {
   "$schema": "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
-  "appId": "YourAppID",
-  "asar": true,
-  "productName": "YourAppName",
+  "appId": "social.whalebird.app",
+  "asar": false,
+  "productName": "Whalebird",
   "directories": {
     "output": "release/${version}"
   },
   "files": [
     "dist",
-    "dist-electron"
+    "dist-electron",
+    "assets",
+    "build"
   ],
   "mac": {
+    "icon": "assets/icons/icon.icns",
     "target": [
-      "dmg"
+      {
+        "target": "dmg",
+        "arch": [
+          "universal"
+        ]
+      }
     ],
+    "category": "public.app-category.social-networking",
+    "entitlements": "plist/entitlements.mac.plist",
+    "entitlementsInherit": "plist/entitlements.mac.plist",
+    "entitlementsLoginHelper": "plist/loginhelper.plist",
+    "hardenedRuntime": true,
+    "gatekeeperAssess": false,
+    "darkModeSupport": false,
+    "notarize": {
+      "appBundleId": "social.whalebird.app"
+    },
     "artifactName": "${productName}-Mac-${version}-Installer.${ext}"
   },
+  "dmg": {
+    "sign": false
+  },
   "win": {
+    "icon": "assets/icons/icon.ico",
     "target": [
       {
         "target": "nsis",
@@ -37,9 +59,40 @@
     "deleteAppDataOnUninstall": false
   },
   "linux": {
+    "icon": "assets/icons",
     "target": [
-      "AppImage"
+      {
+        "target": "AppImage",
+        "arch": [
+          "x64"
+        ]
+      },
+      {
+        "target": "deb",
+        "arch": [
+          "x64"
+        ]
+      },
+      {
+        "target": "rpm",
+        "arch": [
+          "x64"
+        ]
+      },
+      {
+        "target": "tar.bz2",
+        "arch": [
+          "x64"
+        ]
+      },
+      {
+        "target": "snap",
+        "arch": [
+          "x64"
+        ]
+      }
     ],
+    "category": "Network",
     "artifactName": "${productName}-Linux-${version}.${ext}"
   }
 }
