--- a/package.json
+++ b/package.json
@@ -2,18 +2,28 @@
   "name": "whalebird-desktop",
   "private": true,
   "version": "6.0.0",
+  "author": "AkiraFukushima <h3.poteto@gmail.com>",
+  "description": "An Electron based Fediverse client for Windows, Mac and Linux",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/h3poteto/whalebird-desktop.git"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@electron/notarize": "^2.1.0",
     "@fontsource/fira-mono": "^5.0.0",
     "@neoconfetti/svelte": "^1.0.0",
+    "@ptkdev/sveltekit-electron-adapter": "^0.3.0",
     "@rollup/plugin-json": "^6.0.1",
+    "@sveltejs/adapter-auto": "^2.1.0",
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.20.4",
     "@types/cookie": "^0.5.1",
+    "@types/html-to-text": "^9.0.3",
     "autoprefixer": "^10.4.16",
     "crypto-browserify": "^3.12.0",
     "electron": "^26.1.0",
@@ -25,11 +35,10 @@
     "typescript": "^5.2.2",
     "vite": "^4.4.9",
     "vite-plugin-electron": "^0.14.0",
-    "vite-plugin-electron-renderer": "^0.14.5",
-    "vite-plugin-node-stdlib-browser": "^0.2.1"
+    "vite-plugin-electron-renderer": "^0.14.5"
   },
   "type": "module",
-  "main": "main.cjs",
+  "main": "dist-electron/main.cjs",
   "dependencies": {
     "dayjs": "^1.11.10",
     "dexie": "4.0.1-alpha.25",
@@ -37,7 +46,7 @@
     "flowbite-svelte": "^0.44.17",
     "flowbite-svelte-icons": "^0.4.4",
     "html-to-text": "^9.0.5",
-    "megalodon": "9.0.1",
+    "megalodon": "9.1.0",
     "svelte-i18n": "^4.0.0",
     "svelte-virtual-scroll-list": "^1.3.0",
     "tailwindcss": "^3.3.3"
