Disable notarize in electron-builder

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -23,6 +23,7 @@ mac:
   hardenedRuntime: true
   gatekeeperAssess: false
   darkModeSupport: false
+  notarize: false
 win:
   icon: resources/icons/icon.ico
   target:
