--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "whalebird",
   "description": "Electron based Fediverse client application",
-  "version": "6.0.0-alhpa.2",
+  "version": "6.0.0-alpha.3",
   "author": "Akira Fukushima <h3.poteto@gmail.com>",
   "main": "app/background.js",
   "scripts": {
