Hide sensitive image

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typecheck": "tsc -p renderer --noEmit && tsc -p main --noEmit"
   },
   "dependencies": {
+    "blurhash": "^2.0.5",
     "dayjs": "^1.11.10",
     "dexie": "^3.2.4",
     "electron-serve": "^1.1.0",
@@ -19,6 +20,7 @@
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
     "megalodon": "^9.1.1",
+    "react-blurhash": "^0.3.0",
     "react-icons": "^4.11.0",
     "react-intl": "^6.5.1",
     "react-virtuoso": "^4.6.2",
