--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "nextron",
     "build": "nextron build",
     "postinstall": "electron-builder install-app-deps",
-    "typecheck": "tsc -p renderer --noEmit && tsc -p main --noEmit"
+    "typecheck": "tsc -p renderer --noEmit && tsc -p main --noEmit",
+    "lint": "eslint renderer --ext ts,tsx"
   },
   "dependencies": {
     "blurhash": "^2.0.5",
@@ -32,9 +33,14 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/sanitize-html": "^2.9.4",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
     "autoprefixer": "^10.4.16",
     "electron": "^26.2.2",
     "electron-builder": "^24.6.4",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-react": "^7.33.2",
     "next": "^12.3.4",
     "nextron": "^8.12.0",
     "postcss": "^8.4.31",
