Add singleArchfiles for macos build

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -24,6 +24,7 @@ mac:
   gatekeeperAssess: false
   darkModeSupport: false
   notarize: false
+  singleArchFiles: "*"
 win:
   icon: resources/icons/icon.ico
   target:
