--- a/renovate.json
+++ b/renovate.json
@@ -6,5 +6,14 @@
   "prConcurrentLimit": 20,
   "prHourlyLimit": 20,
   "packageRules": [
+    {
+      "groupName": "Next.js and React.js major",
+      "matchPackageNames": [
+        "next",
+        "react"
+      ],
+      "matchUpdateTypes": ["major"],
+      "enabled": false
+    }
   ]
 }
