--- a/package.json
+++ b/package.json
@@ -52,5 +52,6 @@
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
-  }
+  },
+  "packageManager": "yarn@3.6.4"
 }
