--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
   },
   "dependencies": {
     "@emoji-mart/react": "^1.1.1",
+    "@material-tailwind/react": "^2.1.8",
     "blurhash": "^2.0.5",
     "dayjs": "^1.11.10",
     "dexie": "^3.2.4",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0",
     "emoji-mart": "^5.5.2",
-    "flowbite": "^2.0.0",
-    "flowbite-react": "^0.7.0",
     "megalodon": "^9.1.1",
     "react-blurhash": "^0.3.0",
     "react-hotkeys-hook": "^4.4.1",
@@ -36,7 +35,7 @@
     "@babel/runtime-corejs3": "^7.23.2",
     "@electron/notarize": "^2.1.0",
     "@types/node": "^20.0.0",
-    "@types/react": "^18.0.26",
+    "@types/react": "18.2.19",
     "@types/sanitize-html": "^2.9.4",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
