--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0",
     "emoji-mart": "^5.5.2",
-    "megalodon": "^9.1.1",
+    "megalodon": "9.2.2",
     "react-blurhash": "^0.3.0",
     "react-hotkeys-hook": "^4.4.1",
     "react-icons": "^5.0.0",
