Build appx2 for windows store

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "nextron",
     "build": "nextron build",
     "build:mas": "nextron build --config ./electron-builder.mas.yml",
+    "package:appx2": "nextron build --win --x64 && electron-windows-store --assets ./resources/icons --input-directory ./dist/win-unpacked --output-directory ./dist/appx --package-name Whalebird --package-display-name Whalebird --package-version 6.0.2.0 --publisher-display-name h3poteto --identity-name 45610h3poteto.Whalebird",
     "postinstall": "electron-builder install-app-deps",
     "typecheck": "tsc -p renderer --noEmit && tsc -p main --noEmit",
     "lint": "eslint renderer --ext ts,tsx",
@@ -42,6 +43,7 @@
     "autoprefixer": "^10.4.16",
     "electron": "^27.3.0",
     "electron-builder": "^24.6.4",
+    "electron-windows-store": "^2.1.0",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.2",
