Separate invoke method for browser

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,3 +22,6 @@ jobs:
       - name: typecheck
         run: |
           yarn run typecheck
+      - name: Build web
+        run: |
+          yarn run build:web
