--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "electron-store": "^8.1.0",
     "emoji-mart": "^5.5.2",
     "megalodon": "9.2.2",
+    "parse-link-header": "^2.0.0",
     "react-blurhash": "^0.3.0",
     "react-hotkeys-hook": "^4.4.1",
     "react-icons": "^5.0.0",
