--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/runtime-corejs3": "^7.23.2",
     "@electron/notarize": "^2.1.0",
     "@types/node": "^20.0.0",
+    "@types/parse-link-header": "^2.0.3",
     "@types/react": "18.2.19",
     "@types/sanitize-html": "^2.9.4",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
