--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.71.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
   },
