--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,2 +1,7 @@
-yarnPath: .yarn/releases/yarn-3.8.3.cjs
+compressionLevel: mixed
+
+enableGlobalCache: false
+
 nodeLinker: node-modules
+
+yarnPath: .yarn/releases/yarn-4.4.1.cjs
