Migrate eslint config file

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:appx2": "nextron build --win --x64 && electron-windows-store --assets ./resources/icons --input-directory ./dist/win-unpacked --output-directory ./dist/appx --package-name Whalebird --package-display-name Whalebird --package-version 6.2.1.0 --publisher-display-name h3poteto --identity-name 45610h3poteto.Whalebird",
     "postinstall": "electron-builder install-app-deps",
     "typecheck": "tsc -p renderer --noEmit && tsc -p main --noEmit",
-    "lint": "eslint renderer --ext ts,tsx",
+    "lint": "eslint renderer --ext ts,tsx --ignore-pattern 'renderer/.next/*'",
     "thirdparty": "license-checker --production --json > renderer/thirdparty.json",
     "dev:web": "NEXT_PUBLIC_CLIENT_ENV=browser next dev renderer",
     "build:web": "NEXT_PUBLIC_CLIENT_ENV=browser next build renderer",
@@ -40,6 +40,8 @@
   "devDependencies": {
     "@babel/runtime-corejs3": "^7.23.2",
     "@electron/notarize": "^2.1.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.23.0",
     "@types/node": "^22.0.0",
     "@types/parse-link-header": "^2.0.3",
     "@types/react": "18.2.19",
@@ -53,6 +55,7 @@
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-react": "^7.33.2",
+    "globals": "^16.0.0",
     "next": "^14.0.0",
     "nextron": "^9.0.0",
     "postcss": "^8.4.31",
